syntax = "proto3";

package pingpong;

service PingPongPlayer {
  rpc Play (PlayRequest) returns (PlayReply) {}
}

message PlayRequest {
  int32 count = 1;
}

message PlayReply {
  int32 count = 1;
}
